--- a/app/views/admin/module_weathers/show.html.erb
+++ b/app/views/admin/module_weathers/show.html.erb
@@ -16,32 +16,32 @@
 </p>
 
 <p>
-  <b>Tempmaxc:</b>
-  <%= @admin_module_weather.tempMaxC %>
+  <b>Temp Max:</b>
+  <%= @admin_module_weather.tempMaxC %> °C
 </p>
 
 <p>
-  <b>Tempminc:</b>
-  <%= @admin_module_weather.tempMinC %>
+  <b>Temp Min:</b>
+  <%= @admin_module_weather.tempMinC %> °C
 </p>
 
 <p>
-  <b>Windspeedkmph:</b>
+  <b>Wind Speed:</b>
   <%= @admin_module_weather.windspeedKmph %>
 </p>
 
 <p>
-  <b>Winddirection:</b>
+  <b>Wind Direction:</b>
   <%= @admin_module_weather.winddirection %>
 </p>
 
 <p>
-  <b>Weathericonurl:</b>
-  <%= @admin_module_weather.weatherIconUrl %>
+  <b>Weather Picture:</b>
+  <%= image_tag @admin_module_weather.weatherIconUrl%>
 </p>
 
 <p>
-  <b>Weatherdesc:</b>
+  <b>Weather Description:</b>
   <%= @admin_module_weather.weatherDesc %>
 </p>
 
