--- a/app/views/admin/module_rates/index.html.erb
+++ b/app/views/admin/module_rates/index.html.erb
@@ -34,5 +34,5 @@
 
 <br/>
 
-<td><%= link_to "Back to all modules", :controller => "admin/decp_modules", :action => "index" %></td>
+<%= link_to "Back to all modules", :controller => "admin/decp_modules", :action => "index" %>
 <%= link_to 'New Module rate', new_admin_module_rate_path %>
