--- a/app/views/admin/decp_modules/index.html.erb
+++ b/app/views/admin/decp_modules/index.html.erb
@@ -30,4 +30,5 @@
 
 <br/>
 
-<%= link_to 'New Decp module', new_admin_decp_module_path %>
+<%= link_to 'New Decp module', new_admin_decp_module_path %><br/>
+<%= link_to 'Logs', logs_path %>
