--- a/app/views/admin/decp_modules/index.html.erb
+++ b/app/views/admin/decp_modules/index.html.erb
@@ -1,8 +1,10 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing admin_decp_modules</h1>
+<h1>DECP modules</h1>
 
-<%= link_to 'Fetch data for all active modules', :action => :fetch %>
+<div class="fetch_all_link">
+<%= link_to 'Fetch data for all active modules', {:action => :fetch}, :style => "position:relative;top:5px;left:20px;" %>
+</div>
 
 <table>
   <tr>
