--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -21,7 +21,7 @@ p, ol, ul, td {
 }
 
 .fetch_all_link {
-  background-image: url('http://localhost:3000/images/fetch_all.png');
+  background-image: url('/images/fetch_all.png');
   background-repeat: no-repeat;
   background-size: 250px 30px;
   min-height: 50px;
