--- a/app/views/admin/module_weathers/show.html.erb
+++ b/app/views/admin/module_weathers/show.html.erb
@@ -34,7 +34,7 @@
 
     <p>
       <b>Wind Direction:</b>
-      <%= @admin_module_weather.winddirection %>
+      <%= image_tag("/images/wind_directions/wr-#{@admin_module_weather.winddirection}.gif") %>
     </p>
 
     <p>
