--- a/app/views/admin/module_weathers/show.html.erb
+++ b/app/views/admin/module_weathers/show.html.erb
@@ -29,7 +29,7 @@
 
     <p>
       <b>Wind Speed:</b>
-      <%= @admin_module_weather.windspeedKmph %>
+      <%= @admin_module_weather.windspeedKmph %> km/h
     </p>
 
     <p>
