--- a/app/views/admin/decp_modules/edit.html.erb
+++ b/app/views/admin/decp_modules/edit.html.erb
@@ -1,6 +1,17 @@
-<h1>Editing admin_decp_module</h1>
+<div id="wrapper">
 
-<%= render 'form' %>
+  <h1>Editing admin_decp_module</h1>
 
-<%= link_to 'Show', @admin_decp_module %> |
-<%= link_to 'Back', admin_decp_modules_path %>
+  <div id="forma">
+    <%= render 'form' %>
+
+    <%= link_to 'Show', @admin_decp_module %> |
+    <%= link_to 'Back', admin_decp_modules_path %>
+  </div>
+
+</div>
+
+
+<div id="footer">
+  Domagoj Čajić | 2012
+</div>
