--- a/app/views/admin/decp_modules/new.html.erb
+++ b/app/views/admin/decp_modules/new.html.erb
@@ -1,5 +1,15 @@
-<h1>New DECP module</h1>
+<div id="wrapper">
 
-<%= render 'form' %>
+  <h1>New DECP module</h1>
 
-<%= link_to 'Back', admin_decp_modules_path %>
+  <div id="forma">
+    <%= render 'form' %>
+
+    <%= link_to 'Back', admin_decp_modules_path %>
+  </div>
+
+</div>
+
+<div id="footer">
+  Domagoj Čajić | 2012
+</div>
