--- a/app/views/admin/module_rates/edit.html.erb
+++ b/app/views/admin/module_rates/edit.html.erb
@@ -1,6 +1,17 @@
-<h1>Editing admin_module_rate</h1>
+<div id="wrapper">
 
-<%= render 'form' %>
+  <h1>Editing admin_module_rate</h1>
 
-<%= link_to 'Show', @admin_module_rate %> |
-<%= link_to 'Back', admin_module_rates_path %>
+  <div id="forma2">
+    <%= render 'form' %>
+
+    <%= link_to 'Show', @admin_module_rate %> |
+    <%= link_to 'Back', admin_module_rates_path %>
+  </div>
+
+</div>
+
+
+<div id="footer">
+  Domagoj Čajić | 2012
+</div>
