--- a/app/views/admin/module_weathers/index.html.erb
+++ b/app/views/admin/module_weathers/index.html.erb
@@ -1,4 +1,4 @@
-
+<div id="wrapper2">
 <h1>Weather forecasts</h1>
 
 <table>
@@ -39,3 +39,8 @@
 
 <td><%= link_to "Back to all modules", :controller => "admin/decp_modules", :action => "index" %></td>
 <%= link_to 'New Module weather', new_admin_module_weather_path %>
+</div>
+
+<div id="footer2">
+  Domagoj Čajić | 2012
+</div>
