--- a/app/views/admin/decp_modules/index.html.erb
+++ b/app/views/admin/decp_modules/index.html.erb
@@ -1,36 +1,48 @@
-<p id="notice"><%= notice %></p>
+<div id="wrapper">
 
-<h1>DECP Admin console</h1>
+  <p id="notice"><%= notice %></p>
 
-<div class="fetch_all_link">
-<%= link_to 'Fetch data for all active modules', {:action => :fetch}, :style => "position:relative;top:5px;left:20px;" %>
+  <h1>DECP Admin console</h1>
+
+  <div id="forma">
+    <div class="fetch_all_link">
+      <%= link_to 'Fetch data for all active modules', {:action => :fetch} %>
+    </div>
+
+    <table>
+      <tr>
+        <th>Name</th>
+        <th>Description</th>
+        <th>Active</th>
+        <th></th>
+        <th></th>
+        <th></th>
+        <th></th>
+      </tr>
+
+      <% @admin_decp_modules.each do |admin_decp_module| %>
+          <tr>
+            <td style="vertical-align: top;"><%= admin_decp_module.name %></td>
+            <td><%= text_area_tag(:description, admin_decp_module.description, :readonly => true, :size => "24x2") %></td>
+            <td style="vertical-align: top;"><%= admin_decp_module.active? ? "Yes" : "No" %></td>
+            <td style="vertical-align: top;"><%= link_to 'Show', admin_decp_module %></td>
+            <td style="vertical-align: top;"><%= link_to 'Edit', edit_admin_decp_module_path(admin_decp_module) %></td>
+            <td style="vertical-align: top;"><%= link_to "Fetch", :action => :fetch, :id => admin_decp_module.id %></td>
+            <td style="vertical-align: top;"><%= link_to "See Records", :controller => "admin/module_#{admin_decp_module.name.pluralize}", :action => "index" %></td>
+          </tr>
+      <% end %>
+    </table>
+
+    <br/>
+
+    <%= link_to 'New Decp module', new_admin_decp_module_path %>
+    <br/>
+    <%= link_to 'Logs', logs_path %>
+
+  </div>
+
 </div>
 
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Description</th>
-    <th>Active</th>
-    <th></th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-  <% @admin_decp_modules.each do |admin_decp_module| %>
-      <tr>
-        <td style="vertical-align: top;"><%= admin_decp_module.name %></td>
-        <td><%= text_area_tag(:description, admin_decp_module.description, :readonly => true, :size => "24x2")  %></td>
-        <td style="vertical-align: top;"><%= admin_decp_module.active? ? "Yes" : "No" %></td>
-        <td style="vertical-align: top;"><%= link_to 'Show', admin_decp_module %></td>
-        <td style="vertical-align: top;"><%= link_to 'Edit', edit_admin_decp_module_path(admin_decp_module) %></td>
-        <td style="vertical-align: top;"><%= link_to "Fetch", :action => :fetch, :id => admin_decp_module.id %></td>
-        <td style="vertical-align: top;"><%= link_to "See Records", :controller => "admin/module_#{admin_decp_module.name.pluralize}", :action => "index" %></td>
-      </tr>
-  <% end %>
-</table>
-
-<br/>
-
-<%= link_to 'New Decp module', new_admin_decp_module_path %><br/>
-<%= link_to 'Logs', logs_path %>
+<div id="footer">
+  Domagoj Čajić | 2012
+</div>
