--- a/app/views/admin/decp_modules/show.html.erb
+++ b/app/views/admin/decp_modules/show.html.erb
@@ -1,25 +1,39 @@
-<p id="notice"><%= notice %></p>
+<div id="wrapper">
 
-<p>
-  <b>Name:</b>
-  <%= @admin_decp_module.name %>
-</p>
-<p>
-  <b>Description:</b>
-  <%= @admin_decp_module.description %>
-</p>
-<p>
-  <b>Active:</b>
-  <%= @admin_decp_module.active? ? "Yes" : "No" %>
-</p>
+  <p id="notice"><%= notice %></p>
 
-<p>
-  <b>Migration version:</b>
-  <%= @admin_decp_module.migration_version %>
-</p>
+  <div id="forma">
 
-<%= link_to 'Edit', edit_admin_decp_module_path(@admin_decp_module) %> |
-<%= link_to 'Back', admin_decp_modules_path %>
+    <p>
+      <b>Name:</b>
+      <%= @admin_decp_module.name %>
+    </p>
 
-<br/>
-<p><%= link_to 'Destroy', @admin_decp_module, confirm: 'All data from that module will be lost. Are you sure you don\'t want to simply de-activate? (Operation could take about 30 seconds to complete)', method: :delete, :style=>'color:#FF0000;', :class => "css_class" %></p>
+    <p>
+      <b>Description:</b>
+      <%= @admin_decp_module.description %>
+    </p>
+
+    <p>
+      <b>Active:</b>
+      <%= @admin_decp_module.active? ? "Yes" : "No" %>
+    </p>
+
+    <p>
+      <b>Migration version:</b>
+      <%= @admin_decp_module.migration_version %>
+    </p>
+
+    <%= link_to 'Edit', edit_admin_decp_module_path(@admin_decp_module) %> |
+    <%= link_to 'Back', admin_decp_modules_path %>
+
+    <br/>
+
+    <p><%= link_to 'Destroy', @admin_decp_module, confirm: 'All data from that module will be lost. Are you sure you don\'t want to simply de-activate? (Operation could take about 30 seconds to complete)', method: :delete, :style => 'color:#FF0000;', :class => "css_class" %></p>
+
+  </div>
+</div>
+
+<div id="footer">
+  Domagoj Čajić | 2012
+</div>
