--- a/app/views/admin/module_rates/index.html.erb
+++ b/app/views/admin/module_rates/index.html.erb
@@ -1,39 +1,49 @@
-<h1>Exchange rates</h1>
+<div id="wrapper">
 
-<table>
-  <tr>
-    <th>timestamp</th>
-    <th>Chf</th>
-    <th>Cny</th>
-    <th>Eur</th>
-    <th>Gbp</th>
-    <th>Hrk</th>
-    <th>Jpy</th>
-    <th>Usd</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+  <h1>Exchange rates</h1>
 
-  <% @admin_module_rates.each do |admin_module_rate| %>
+  <div id="forma2">
+    <table>
       <tr>
-        <% require 'date' %>
-        <td><%= Time.at(admin_module_rate.timestamp).to_datetime.strftime("%Y-%m-%d %H:%M:%S") %></td>
-        <td><%= admin_module_rate.CHF %></td>
-        <td><%= admin_module_rate.CNY %></td>
-        <td><%= admin_module_rate.EUR %></td>
-        <td><%= admin_module_rate.GBP %></td>
-        <td><%= admin_module_rate.HRK %></td>
-        <td><%= admin_module_rate.JPY %></td>
-        <td><%= admin_module_rate.USD %></td>
-        <td><%= link_to 'Show', admin_module_rate %></td>
-        <td><%= link_to 'Edit', edit_admin_module_rate_path(admin_module_rate) %></td>
-        <td><%= link_to 'Destroy', admin_module_rate, confirm: 'Are you sure?', method: :delete %></td>
+        <th>timestamp</th>
+        <th>Chf</th>
+        <th>Cny</th>
+        <th>Eur</th>
+        <th>Gbp</th>
+        <th>Hrk</th>
+        <th>Jpy</th>
+        <th>Usd</th>
+        <th></th>
+        <th></th>
+        <th></th>
       </tr>
-  <% end %>
-</table>
 
-<br/>
+      <% @admin_module_rates.each do |admin_module_rate| %>
+          <tr>
+            <% require 'date' %>
+            <td><%= Time.at(admin_module_rate.timestamp).to_datetime.strftime("%Y-%m-%d %H:%M:%S") %></td>
+            <td><%= admin_module_rate.CHF %></td>
+            <td><%= admin_module_rate.CNY %></td>
+            <td><%= admin_module_rate.EUR %></td>
+            <td><%= admin_module_rate.GBP %></td>
+            <td><%= admin_module_rate.HRK %></td>
+            <td><%= admin_module_rate.JPY %></td>
+            <td><%= admin_module_rate.USD %></td>
+            <td><%= link_to 'Show', admin_module_rate %></td>
+            <td><%= link_to 'Edit', edit_admin_module_rate_path(admin_module_rate) %></td>
+            <td><%= link_to 'Destroy', admin_module_rate, confirm: 'Are you sure?', method: :delete %></td>
+          </tr>
+      <% end %>
+    </table>
 
-<%= link_to "Back to all modules", :controller => "admin/decp_modules", :action => "index" %>
-<%= link_to 'New Module rate', new_admin_module_rate_path %>
+    <br/>
+
+    <%= link_to "Back to all modules", :controller => "admin/decp_modules", :action => "index" %>
+    <%= link_to 'New Module rate', new_admin_module_rate_path %>
+  </div>
+</div>
+
+
+<div id="footer">
+  Domagoj Čajić | 2012
+</div>
