--- a/app/views/admin/module_rates/new.html.erb
+++ b/app/views/admin/module_rates/new.html.erb
@@ -1,5 +1,15 @@
-<h1>New admin_module_rate</h1>
+<div id="wrapper">
 
-<%= render 'form' %>
+  <h1>New admin_module_rate</h1>
 
-<%= link_to 'Back', admin_module_rates_path %>
+  <div id="forma2">
+    <%= render 'form' %>
+
+    <%= link_to 'Back', admin_module_rates_path %>
+  </div>
+</div>
+
+
+<div id="footer">
+  Domagoj Čajić | 2012
+</div>
