--- a/app/views/admin/module_rates/show.html.erb
+++ b/app/views/admin/module_rates/show.html.erb
@@ -1,5 +1,7 @@
+<div id="wrapper">
 <p id="notice"><%= notice %></p>
 
+<div id="forma2">
 <p>
   <b>timestamp</b>
   <%= @admin_module_rate.timestamp %>
@@ -793,3 +795,10 @@
 
 <%= link_to 'Edit', edit_admin_module_rate_path(@admin_module_rate) %> |
 <%= link_to 'Back', admin_module_rates_path %>
+</div>
+</div>
+
+
+<div id="footer">
+  Domagoj Čajić | 2012
+</div>
