--- a/app/views/admin/module_weathers/edit.html.erb
+++ b/app/views/admin/module_weathers/edit.html.erb
@@ -1,6 +1,14 @@
-<h1>Editing admin_module_weather</h1>
+<div id="wrapper3">
 
-<%= render 'form' %>
+  <h1>Editing admin_module_weather</h1>
 
-<%= link_to 'Show', @admin_module_weather %> |
-<%= link_to 'Back', admin_module_weathers_path %>
+  <%= render 'form' %>
+
+  <%= link_to 'Show', @admin_module_weather %> |
+  <%= link_to 'Back', admin_module_weathers_path %>
+
+</div>
+
+<div id="footer2">
+  Domagoj Čajić | 2012
+</div>
