--- a/app/views/admin/module_weathers/new.html.erb
+++ b/app/views/admin/module_weathers/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New admin_module_weather</h1>
+<div id="wrapper3">
+  <h1>New admin_module_weather</h1>
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to 'Back', admin_module_weathers_path %>
+  <%= link_to 'Back', admin_module_weathers_path %>
+</div>
+
+<div id="footer2">
+  Domagoj Čajić | 2012
+</div>
